[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "sphinx-imgur"
version = "3.0.0"
description = "Embed Imgur images and albums in Sphinx documents/pages."
readme = "README.md"
authors = ["Robpol86 <robpol86@gmail.com>"]
license = "BSD-2-Clause"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: MacOS X",
    "Environment :: Plugins",
    "Environment :: Win32 (MS Windows)",
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development :: Documentation",
]

[tool.poetry.urls]
documentation = "https://sphinx-imgur.readthedocs.io"
repository = "https://github.com/Robpol86/sphinx-imgur"

[tool.poetry.dependencies]
python = "^3.6.2"
# Project dependencies.
sphinx = "*"
# Docs.
sphinx-copybutton = {version = "*", optional = true}
sphinx-notfound-page = {version = "*", optional = true}
sphinx-panels = {version = "*", optional = true}
sphinx-rtd-theme = {version = "*", optional = true}
sphinxext-opengraph = "*"
toml = {version = "*", optional = true}

[tool.poetry.extras]
docs = [
    "sphinx-copybutton",
    "sphinx-notfound-page",
    "sphinx-panels",
    "sphinx-rtd-theme",
    "sphinxext-opengraph",
    "toml",
]

[tool.poetry.dev-dependencies]
# Linters.
black = "*"
flake8 = "*"
flake8-docstrings = "*"
flake8-import-order = "*"
pep8-naming = "*"
pylint = "*"
# Tests.
beautifulsoup4 = "*"
coverage = {version = "*", extras = ["toml"]}
pytest = "*"
pytest-cov = "*"
pytest-icdiff = "*"
sphinxext-opengraph = "*"
TexSoup = "*"

[tool.black]
line-length = 125
target-version = ["py36", "py37", "py38", "py39"]

[tool.coverage.report]
exclude_lines = [
    "^\\s*from",
    "^\\s*import",
    "^\\s*raise AssertionError",
    "^\\s*raise NotImplementedError",
]
fail_under = 85

[tool.coverage.run]
branch = true

[tool.pylint.FORMAT]
good-names = ["i", "j", "k", "ex", "Run", "_", "x", "y", "z", "fd"]
ignore = [".venv/*", "build/*", "dist/*"]
max-line-length = 125
reports = false

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "consider-using-f-string",
    "too-many-arguments",
]

[tool.pylint.SIMILARITIES]
ignore-imports = true
min-similarity-lines = 7

[tool.pylint.TYPECHECK]
ignored-modules = ["distutils", "py"]

[tool.pytest.ini_options]
addopts = "--cov-report=term-missing --durations=15 --showlocals --verbose --verbose"
filterwarnings = [
    "ignore::DeprecationWarning:sphinx.*:",
]
log_level = "DEBUG"
